--- a/Home_Page.html
+++ b/Home_Page.html
@@ -1,44 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>King Bazar</title>
- <link href="style.css" rel="stylesheet" type="text/css">   
+<title>King Bazar</title> 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        .background{
+            width: 100%;
+            height: 100%;
+            max-height: 100%;
+            margin: 0;
+            padding: 0;
+            background-size:100% 100%;
+            background-repeat: no-repeat;
+            background-image: url(backrgound1.jpeg);
+        }
+     .header{
+        position: absolute;
+        top: 60px;
+        left: 30%;
+    }
+    .aan{
+        position: absolute;
+        top: 300px;
+        left: 2%;
+        width: 200px;
+    }
+    .con{
+        position: absolute;
+        top: 300px;
+        left: 20%;
+        width: 350px;
+    }
+    .enq{
+        position: absolute;
+        top: 300px;
+        left: 60%;
+width: 200px    }
+    .loc{
+        position: absolute;
+        top: 290px;
+        left: 80%;
+        width: 200px;
+    }
+    h1{
+        position: absolute;
+        left: 15%;
+        font-style: italic;
+        top: 330px;
+    }
+    .face{
+        position: absolute;
+        left: 45%;
+        top: 600px;
+        width: 60px;
+    }
+    .twitter{
+        position: absolute;
+        left: 50%;
+        top: 600px;
+        width: 60px;
+    }
+    .insta{
+        position: absolute;
+        left: 55%;
+        top: 600px;
+        width: 60px;
+    }
+</style>
 </head>
 <body>
+<div class="background"></div>
+    <img src="kingbazarheader.png" class="header">
 
-<div class="header">
-  <h1><img src="koning.png" style="width: 5%" alt="koning">King Bazar</h1>
-</div>
-
-<div class="topnav">
-  <a href="Home_Page.html">Home Page</a>
-    <a href="Ons_Aanbod.html">Ons Aanbod</a>
-  <a href="locatie.html">Locatie</a>
-  <a href="Enquete.html">Gratis Enquete</a>
-    <a href="contacteer_ons.html">Contacteer Ons</a>
-</div>
-
-<div class="row">
-  <div class="column side">
-    <h2>Meer weten...</h2>
-   <a href="Ons_Aanbod.html"><img alt="left" src="left_arrow.png"></a> 
-  </div>
-  <div class="column middle">
-    <h2>Over Ons</h2>
-    <p>King Bazar is gespecialiseerd in zowel "Salvage And Goods" als het verkopen van voedingsmiddelen. We zijn al meer dan 10 jaar aanwezig in centrum van Brussel.Wat vroeger een eenmanszaak was is op de dag van vandaag een zeer grote familie bedrijf geworden. We kennen hier al een grote succes en hopen in de toekomst nog meer klanten te bereiken. Binnen de komende maanden zetten we een online-shop ter beschikking van deze die het willen via deze site!</p>
-  </div>
-  <div class="column side">
-       <h2>Verlaat ons zeker niet voordat je de enquete hebt ingevuld!</h2><a href="Enquete.html">
-   <img alt="right" src="right_arrow.png"></a>
-  </div>
-</div>
-    <img src="fruits.png.jpg" alt="fruit" style="width: 100%">
-
-<div class="footer">
-    <a href="https://www.facebook.com"><p style="color: white">Facebook</p></a>
-</div>
-  
+<img src="AANBOD.png" class="aan">
+<img src="CONTACTEER.png" class="con">
+<img src="ENQUETE1.png" class="enq">
+    <a href="locatie1.html"><img src="LOCATIE1.png" class="loc"></a>
+<h1>"King Bazar is gespecialiseerd in zowel "Salvage And Goods" als het verkopen van voedingsmiddelen. We zijn al meer dan 10 jaar aanwezig in centrum van Brussel.Wat vroeger een eenmanszaak was is op de dag van vandaag een zeer grote familie bedrijf geworden. We kennen hier al een grote succes en hopen in de toekomst nog meer klanten te bereiken. Binnen de komende maanden zetten we een online-shop ter beschikking van deze die het willen via deze site!</h1>
+<img src="facebook.png" class="face">
+<img src="twitter.png" class="twitter">
+<img src="instagram.png" class="insta">
 </body>
 </html>
